* fixed login path (removed /) * fixed paths to files (in case of subdirectory) * increased z-index of combo box elements to put on top of dialogs and masks * put cursor back to default for desktop shortcuts (for more desktop like look and feel--no longer pointers)

--- a/trunk/resources/css/load.css
+++ b/trunk/resources/css/load.css
@@ -38,3 +38,8 @@
 #loginPanel,#registerPanel{
     margin: 10px 10px 0 15px;
 }
+
+/* fix combo lists from hiding under dialogs and masks */
+.x-combo-list{
+    z-index: 35000;
+}
